# booking_cancellation

./: .coverage  .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.airflow.yml  docker-compose.local.yml  docker-compose.minio.yml  docker-compose.postgres.yml  ml_system_design_doc.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
airflow/dags/: batch_scoring_dag.py
app/: main.py
app/api/: routes.py
app/core/: config.py  model_loader.py
app/schemas/: request.py  response.py
app/services/: prediction_service.py
artifacts/: booking_risk_scores.csv  high_risk_bookings.csv  lightgbm_model.pkl  lightgbm_model.txt  model_comparison.json  model_old_comparison.json  predictions.csv
data/processed/: booking_clean.csv
data/raw/: new_bookings.csv
docs/: ml_system_design_doc.md
model/: lightgbm_model.txt  model_comparison.json
scripts/: bootstrap_airflow.ps1  bootstrap_local.ps1
src/: config.py  predict.py  preprocessing.py  train_models.py
src/application/: monitoring.py  scoring.py  training.py
src/domain/entities/: __init__.py  batch_scoring.py  booking.py  scoring.py  training_result.py
src/domain/rules/: risk_rules.py
src/infrastructure/data/: preprocessing.py
src/infrastructure/db/: connection.py  models.py  repositories.py
src/infrastructure/ml/: artifacts.py  (+1 more)
src/interfaces/: main.py
tests/: conftest.py  test_api_routes.py  test_batch_run_storage.py  test_check_batch_run_cli.py  test_config.py  test_db_connection.py  test_db_repositories.py  test_entities.py  test_main.py  test_ml_artifacts.py  test_model_loader.py  test_monitoring.py  test_predict_cli.py  test_preprocessing.py  test_risk_rules.py  test_s3_storage.py  test_scoring.py  test_training.py
(+11 files in other folders)
