[project]
name = "booking-cancellation-airflow"
version = "0.1.0"
description = "Booking cancellation prediction service with FastAPI, Postgres, MinIO, and Airflow"
requires-python = ">=3.11,<3.12"
dependencies = [
    "boto3==1.34.162",
    "fastapi==0.110.3",
    "lightgbm==4.5.0",
    "numpy==1.26.4",
    "pandas==2.2.2",
    "psycopg[binary]==3.2.1",
    "pydantic==2.8.2",
    "python-dotenv==1.0.1",
    "scikit-learn==1.5.1",
    "sqlalchemy==2.0.32",
    "uvicorn[standard]==0.30.5",
]

[dependency-groups]
dev = [
    "httpx==0.27.0",
    "mypy==1.11.1",
    "pylint==3.2.6",
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "ruff==0.6.2",
]

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".venv",
    "venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pylint.main]
ignore = ["venv", ".venv", "__pycache__", ".pytest_cache", ".mypy_cache", ".ruff_cache"]

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "trailing-newlines",
    "too-many-instance-attributes",
    "too-many-locals",
    "import-outside-toplevel",
]

[tool.pylint.design]
max-args = 10

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true
exclude = ["^tests/", "^\\.venv/", "^venv/"]